--- a/package.json
+++ b/package.json
@@ -16,14 +16,23 @@
     "@fancyapps/ui": "^5.0.36",
     "@remix-run/react": "^2.12.1",
     "@remix-run/server-runtime": "^2.12.1",
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/react-loader": "^1.10.7",
+    "@sanity/visual-editing": "^2.1.10",
     "@shopify/hydrogen": "2024.7.7",
     "@shopify/remix-oxygen": "^2.0.7",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "groqd": "^0.15.12",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "aos": "^2.3.4"
+    "sanity": "^3.57.4",
+    "schema-dts": "^1.1.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
@@ -38,8 +47,9 @@
     "@types/eslint": "^9.6.1",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.11.1",
+    "eslint": "^8.57.1",
     "eslint-plugin-hydrogen": "0.12.3",
+    "miniflare": "^3.20240909.5",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vite": "^5.4.7",
