--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,13 +6,14 @@
     "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["app/*"]
+      "~/*": [
+        "app/*"
+      ]
     }
   },
   "include": [
     "./**/*.d.ts",
     "./**/*.js",
-    "./**/*.jsx",
-    "app/routes/sanity.preview.tsx"
+    "./**/*.jsx"
   ]
 }
