--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@portabletext/react": "^3.1.0",
     "@remix-run/react": "^2.10.1",
     "@remix-run/server-runtime": "^2.10.1",
     "@sanity/asset-utils": "^2.0.6",
