--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@shopify/remix-oxygen": "^2.0.7",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.12.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "groqd": "^0.15.12",
     "isbot": "^3.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
