--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@gsap/react": "^2.1.1",
     "@portabletext/react": "^3.1.0",
     "@remix-run/react": "^2.10.1",
     "@remix-run/server-runtime": "^2.10.1",
@@ -26,10 +27,11 @@
     "@shopify/remix-oxygen": "^2.0.7",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.13.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "groqd": "^0.15.12",
+    "gsap": "^3.12.5",
     "isbot": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
