--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "^1.10.7",
     "@sanity/visual-editing": "^2.1.10",
-    "@shopify/hydrogen": "2024.7.7",
-    "@shopify/remix-oxygen": "^2.0.7",
+    "@shopify/hydrogen": "^2024.7.8",
+    "@shopify/remix-oxygen": "^2.0.8",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.12.0",
